dist/1.0/bin/sample/retrieveUnpackaged/objects/ConfiguredAttribute__c.object
<CustomObject>
    <description>Predefined Configuration of Attributes</description>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Configured Attributes</relationshipLabel>
        <relationshipName>R00N80000002olIuEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConfiguredGenericProduct__c</fullName>
        <label>Configured Generic Product</label>
        <referenceTo>ConfiguredGenericProduct__c</referenceTo>
        <relationshipLabel>Configured Attributes</relationshipLabel>
        <relationshipName>Configured_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GenericProductAttribute__c</fullName>
        <label>Generic Product Attribute</label>
        <referenceTo>Generic_Product_Attribute__c</referenceTo>
        <relationshipLabel>Configured Attributes</relationshipLabel>
        <relationshipName>Configured_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Val__c</fullName>
        <label>Value</label>
        <length>7200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Configured Attribute</label>
    <nameField>
        <label>Configured Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configured Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>